# openai-multi-client

./: .gitignore  LICENSE  README.md  mock_test.py  pyproject.toml  real_test.py  requirements.txt  test.py
openai_multi_client/: __init__.py
